13184
It would be nice if the following worked:
```scala
scala>  def foo[T](implicit clazz : Class[T]) = clazz
foo: [T](implicit Class[T])Class[T]

scala> foo[String]
<console>:6: error: no implicit argument matching parameter type Class[String] was found.
       foo[String]
       ^
```

i.e. if we had magic compiler support that made the concrete class object for Class[T] available implicitly.

In particular this could then change classOf from compiler magic to the following in predef:
```scala
  def classOf[T](implicit clazz : Class[T]) = clazz;
```

Which would mean that this would now work as a normal method.
